Update Swagger UI to reflect the new addition of registration user endpoint
